syntax = "proto3";

option go_package = "api/pb";

service BookService {
  rpc ListBook(EmptyBookRequest) returns (stream Book);
}

message Book {
  int64 id = 1;
  string name = 2;
  string author = 3;
}

message EmptyBookRequest {}
